--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="estilos.css">
-</head>
-<body>
-    <h1>Bienvenidos</h1>
-    <p>esta es una pagina de pruebas</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <title>Documento de pruebas</title>
+    <link rel="stylesheet" href="estilos.css" />
+  </head>
+  <body>
+    <div class="contenedor-top">
+      <h1>Bienvenidos</h1>
+      <p>esta es una pagina de pruebas</p>
+    </div>
+    <p>camilo</p>
+    <div>
+        <p>pruebas</p>
+        <div>
+            <h3>juan camilo</h3>
+        </div>
+    </div>
+  </body>
 </html>
